fix(DeliveryService): add final and remove some functions